# server/src/docs/swagger.json
@@ -9,7 +9,7 @@
         }
     },
     "host": "localhost:7686",
-    "basePath": "/auth",
+    "basePath": "/",
     "tags": [
         {
             "name": "Institute",
@@ -111,7 +111,25 @@
                     {
                         "JWT": []
                     }
-                ]
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "_id of the institution to get details"
+                    }
+                ],
+                "responses": {
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
             }
         },
         "/institute/register-institutue": {
@@ -123,10 +141,31 @@
                     {
                         "JWT": []
                     }
-                ]
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Send institution details to save them in db",
+                        "schema": {
+                            "$ref": "#/definitions/Institution"
+                        }
+                    }
+                ],
+                "responses": {
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
             }
         },
-        "/institute/{instituteId}/update-institute": {
+        "/institute/update-institute": {
             "patch": {
                 "tags": [
                     "Institute"
@@ -135,10 +174,36 @@
                     {
                         "JWT": []
                     }
-                ]
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "_id of the institution"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Send institution details to update them in db",
+                        "schema": {
+                            "$ref": "#/definitions/Institution"
+                        }
+                    }
+                ],
+                "responses": {
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
             }
         },
-        "/institute/{instituteId}/delete-institute": {
+        "/institute/delete-institute": {
             "delete": {
                 "tags": [
                     "Institute"
@@ -147,11 +212,74 @@
                     {
                         "JWT": []
                     }
-                ]
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "_id of the institution to get details"
+                    }
+                ],
+                "responses": {
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
             }
         }
     },
     "definitions": {
+        "Institution": {
+            "type": "object",
+            "properties": {
+                "details": {
+                    "type": "object",
+                    "properties": {
+                        "name": {
+                            "type": "string"
+                        },
+                        "logo": {
+                            "type": "string"
+                        },
+                        "state": {
+                            "type": "string"
+                        },
+                        "country": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "sheetID": {
+                    "type": "string"
+                },
+                "facilitator": {
+                    "type": "string"
+                },
+                "schedule": {
+                    "type": "object",
+                    "properties": {
+                        "hour": {
+                            "type": "number",
+                            "default": 17
+                        },
+                        "minute": {
+                            "type": "number",
+                            "default": 30
+                        }
+                    }
+                },
+                "isActive": {
+                    "type": "boolean",
+                    "default": true
+                }
+            }
+        }
     },
     "securityDefinitions": {
         "JWT": {
